fix: fixed buger menu showing on mobile screen

--- a/src/assets/scss/base/_structure-of-pages.scss
+++ b/src/assets/scss/base/_structure-of-pages.scss
@@ -16,7 +16,7 @@ body {
 body {
   overflow-y: scroll;
 
-  &.modal-show {
+  &.modal-show, &.menu-show {
     overflow-y: hidden;
 
     .main-container {
